Fixed spinner not being visible inside a modal dialog
(cherry picked from commit a5b4c6e5db2311b7ebf3b7b88fb6d9c6ccb54f9c)

--- a/src/main/resources/assets/admin/common/styles/api/ui/mask.less
+++ b/src/main/resources/assets/admin/common/styles/api/ui/mask.less
@@ -51,7 +51,7 @@
     left: 0;
     background-color: white;
     overflow: hidden;
-    z-index: @z-index-mask;
+    z-index: @z-index-load-mask;
     width: 100%;
     height: 100%;
   }
@@ -90,7 +90,7 @@
     background-color: transparent;
 
     .mask-splash {
-      z-index: @z-index-mask+1;
+      z-index: @z-index-load-mask;
       position: absolute;
       padding: 10px;
       left: 50%;
